# tesis

Experimentacion/simgrid/opportunistic_network_experiments/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  create_platform_and_deployment.py  create_tasks.py  notas.txt  platform.xml  run_experiment.sh
Experimentacion/simgrid/opportunistic_network_experiments/big_network_disconnections/: big_network_disconnections  big_network_disconnections.cpp  network_topology.txt  platform.xml  simulation_logs.txt
Experimentacion/simgrid/opportunistic_network_experiments/big_network_no_disconnections/: big_network_no_disconnections  big_network_no_disconnections.cpp  deployment.xml  platform.xml  simulation_logs.txt  tasks.txt  workers_idle_times.txt
Experimentacion/simgrid/opportunistic_network_experiments/cmake/Modules/: FindSimGrid.cmake
Experimentacion/simgrid/opportunistic_network_experiments/first_network/: first_network.cpp  first_network_deployment.xml  first_network_platform.xml
Experimentacion/simgrid/opportunistic_network_experiments/no_disconnection_network/: no_disconnection_network.cpp
Experimentacion/simgrid/opportunistic_network_experiments/one_disconnection_network/: one_disconnection_network  one_disconnection_network.cpp  one_disconnection_network_deployment.xml  one_disconnection_network_platform.xml
Experimentacion/simgrid/opportunistic_network_experiments/utils/: CMakeLists.txt  mailboxes_manager.cpp  mailboxes_manager.h  map_reduce_coordinator.cpp  map_reduce_coordinator.h  map_reduce_worker.cpp  map_reduce_worker.h  message_helper.cpp  message_helper.h  network_organizer.cpp  node_performance.cpp  node_performance.h  nodes_destination_translator.cpp  nodes_destination_translator.h  pending_map_task.h  utils  utils.cpp  utils.h  utilstest.cpp
iot-labs/: .bash_history  .iotlabrc  (+1 more)
(+97 files in other folders)
